Development Version
===================

* Add completions for SQL keywords.
* Change shortcuts to switch editors to Ctrl+<number>.


Version 0.2.0 (2015-02-01)
==========================

* Format SQL statement at cursor (Alt+F).
* Jump to next/previous statement (Alt+Shift+Down, Alt+Shift+Up).
* Passwords are now saved in keyring.


Version 0.1.0 (2015-01-31)
==========================

* Initial version.