@@ -2,6 +2,7 @@ Development Version
 ===================
 
 * Add completions for SQL keywords.
+* Add completions for tables.
 * Change shortcuts to switch editors to Ctrl+<number>.
 
 
